--- a/articlestyle.css
+++ b/articlestyle.css
@@ -1,43 +1,86 @@
-::-webkit-scrollbar {
+u:-webkit-scrollbar {
     display: none;
 }
+
 body {
-  font-family: 'Work Sans', sans-serif;
-  font-display: block;
-  font-size: 100%;
+	text-align: center;
+	font-family: 'Work Sans', sans-serif;
+	font-display: block;
+	font-size: 100%;
+	font-size: max(100%, .4cm);
 }
 @media (max-aspect-ratio: 1/1) {
-  body {
-    /* if you change this, remember to adjust value for #preinner too! */
-    font-size: 2.5vh;
-  }
+	body {
+	/* if you change this, remember to adjust value for #preinner too! */
+		font-size: 100%;
+		font-size: min(4vw, .4cm);
+	}
 }
 body, h1, h2, h3, h4, h5, h6 {
   font-size-adjust: 0.5;
 }
-#backprofilepic {
-  border-radius: 50%;
-  height: 4em;
+.warning {
+  color:red;
 }
+#backprofilepic {
+	border-radius: 50%;
+	height: 4em;
+}
+/*
 #backarrow {
-  width: 2.75em;
-  height: 2.75em;
+  width: 6em;
+  height: 6em;
   padding-top: 1.25em;
   padding-left: 1.25em;
   border-radius: 50%;
 }
+*/
+#sidebar {
+	padding: 1em;
+	text-align: left;
+	line-height: 2em;
+}
+.nostyle {
+	color: black;
+	text-decoration: none;
+}
+.code {
+				overflow-x:auto;
+				/* white-space: pre-wrap; */
+				font-family: monospace;
+				color: #c5cdd9;
+				background-color: #2c2e34;
+				border: 1em solid #2c2e34;
+				border-radius: 1em;	
+			}
+			.code .Comment {
+				color: #828a98;
+				font-style: italic;
+			}
+			.code .Identifier {
+				color: #00ffff;
+			}
+			.code .Statement {
+				color: #d38aea;
+			}
+			.code .PreProc {
+				color: #ec7279;
+			}
+			.code .Error {
+				color: #ffffff;
+				background-color: #ff6060;
+				padding-bottom: 1px;
+			}
 /* entire container, keeps perspective */
 .flip-container {
-  position: absolute;
-  left: calc(7.5vw - 2em);
+	float: left;
+	padding-right: 1em;
+	padding-bottom: 1em;
+	display: inline-block;	
 	perspective: 1000px;
 }
-	/* flip the pane when hovered */
-.flip-container:hover .flipper, .flip-container.hover .flipper {
-	transform: rotateY(180deg);
-}
 .flip-container, .front, .back {
-  border-radius: 50%;
+	border-radius: 50%;
 	width: 4em;
 	height: 4em;
 }
@@ -50,11 +93,11 @@ body, h1, h2, h3, h4, h5, h6 {
 }
 /* hide back of pane during swap */
 .front, .back {
-  text-align: center;
+	text-align: center;
 	backface-visibility: hidden;
 	position: absolute;
 	top: 0;
-	left: 0;
+	left: 0;	
 }
 /* front pane, placed above back */
 .front {
@@ -64,17 +107,70 @@ body, h1, h2, h3, h4, h5, h6 {
 }
 /* back, initially hidden pane */
 .back {
+	line-height:4em;
 	transform: rotateY(180deg);
-  background-color: lightgrey;
+	background-color: lightgrey;
+}
+.back span {
+	font-size: 3em;
+}
+@media (min-width: 80em) {
+	#backprofilepic {
+		height: 8em;
+		width: 8em;
+	}
+	#sidebar {
+		position: absolute;
+		left: 5em;
+		/* distance from left side should = distance from left side of article to the left side of the window divided by two, and then subtract 5em */
+		left: calc(calc(calc(50% - 25em) / 2) - 5em);
+		top: 5em;
+		text-align: center;
+		line-height: 0px;
+	}
+	.flip-container {
+		float: none;
+		padding: 0px;
+	}
+	/* flip the pane when hovered */
+	.flip-container:hover .flipper, .flip-container.hover .flipper {
+		transform: rotateY(180deg);
+	}
+	.flip-container, .front, .back {
+		width: 8em;
+		height: 8em;
+	}
+	.back {
+		line-height: 8em;
+	}
+	.back span {
+		font-size: 6em;
+	}
+}
+
+
+#contentbox {
+	width: 100%;
+	max-width: 50em;
+	min-width: 10%
 }
 article {
+	display: inline-block;
 	text-align: left;
-	padding-left: 15vw;
-	width: 70vw;
-  padding-bottom: 1em;
+	/* padding-left: 15vw; */
+	/* width: 70vw; */
+	width: 100%;
+	max-width: 50em;
+	min-width: 10%;
+	padding-bottom: 5em;
 }
-article h1 {
-  margin-top: 1em;
+@media (min-width: 80em) {
+	article {
+		padding-top: 5em;
+	}
+}
+article h1:first-of-type {
+  line-height: 0px;
 }
 .centeredtext {
 	text-align: center;
