--- a/articlestyle.css
+++ b/articlestyle.css
@@ -17,7 +17,11 @@ body {
 	}
 }
 body, h1, h2, h3, h4, h5, h6 {
-  font-size-adjust: 0.5;
+	font-size-adjust: 0.5;
+}
+.date {
+	color: gray;
+	font-style: italic;
 }
 .warning {
   color:red;
