quick fix to last commit: didn't write changes to correct style file

--- a/styles/article.css
+++ b/styles/article.css
@@ -23,6 +23,10 @@ u:-webkit-scrollbar {
 	text-align: left;
 	line-height: 2em;
 }
+.date {
+	color: gray;
+	font-style: italic;
+}
 .nostyle {
 	color: black;
 	text-decoration: none;
