--- a/styles/universal.css
+++ b/styles/universal.css
@@ -70,7 +70,7 @@
 		.code .texSpecial {
 			color: #deb974;
 		}
-		#license {
+		#license #indiewebring {
 			display: inline-block;
 			width: 50em;
 			min-width: 50%;
