hiding p-note...they don't need to know

--- a/styles/universal.css
+++ b/styles/universal.css
@@ -20,6 +20,10 @@
 			list-style-position: inside;
 			padding-left: 0.5em;
 		}
+		/* h-entry rules */
+		.p-note {
+			display: none;
+		}
 		
 		/* code highlighting rules */
 		.code {
