adding #contentbox to article pages so that if there are multiple entries they stack vertically

--- a/styles/article.css
+++ b/styles/article.css
@@ -156,6 +156,7 @@ u:-webkit-scrollbar {
 			}
 		}
 		#contentbox {
+			display: inline-block;
 			width: 100%;
 			max-width: 50em;
 			min-width: 10%
