--- a/styles/universal.css
+++ b/styles/universal.css
@@ -74,6 +74,45 @@
 		.code .texSpecial {
 			color: #deb974;
 		}
+		#contentbox {
+			display: inline-block;
+			padding-top: 3.5em;
+			width: 100%;
+			max-width: 50em;
+			min-width: 10%
+		}
+		article {
+			display: inline-block;
+			text-align: left;
+			padding-bottom: 3em;
+			/* padding-left: 15vw; */
+			/* width: 70vw; */
+			width: 100%;
+			max-width: 50em;
+			min-width: 10%;
+		}
+		.kind {
+			font-family: monospace;
+			color: black;
+			text-decoration: none;
+		}
+		.kind:hover {
+			text-decoration: underline;
+		}
+		.entry-data {
+			font-family: monospace;
+		}
+		.hidden-u-photo {
+			display: none;
+		}
+		@media (min-width: 80em) {
+			article {
+				margin-top: 2em;
+				padding: 1em;
+				border-radius: 25px;
+				border: solid .2em lightgrey;
+			}
+		}
 		#license #indiewebring {
 			display: inline-block;
 			width: 50em;
