--- a/styles/universal.css
+++ b/styles/universal.css
@@ -106,6 +106,8 @@
 			article {
 				margin-top: 2em;
 				padding: 1em;
+			}
+			article .feed {
 				border-radius: 25px;
 				border: solid .2em lightgrey;
 			}
