tweaks to article formatting

--- a/styles/universal.css
+++ b/styles/universal.css
@@ -21,6 +21,7 @@
 			padding-left: 0.5em;
 		}
 		#contentbox {
+			text-align: left;
 			display: inline-block;
 			width: 100%;
 			max-width: 50em;
