adding initial support for Watch posts
- microformats aren't there yet
- transitioning from single-page CSS to external stylesheets

--- a/styles/article.css
+++ b/styles/article.css
@@ -21,6 +21,11 @@
 			color: black;
 			text-decoration: none;
 		}
+		.watch img {
+			width: 8em;
+			padding: 0em 1em;
+			float: left;
+		}
 		table {
 			margin: 0 auto;
 			border-collapse: collapse;
