--- a/2021/08/horton-hears-a-whostyle/whostyles/philosopher-life.css
+++ b/2021/08/horton-hears-a-whostyle/whostyles/philosopher-life.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Zing';
-  src: url('fonts/zing.woff2') format('woff2');
+  src: url('/2021/08/horton-hears-a-whostyle/fonts/zing.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-stretch: extra-condensed;
