--- a/styles/whostyles/whostyle-v1.css
+++ b/styles/whostyles/whostyle-v1.css
@@ -14,7 +14,7 @@
 	text-align: left;
 	overflow: auto;
 }
-.whostyle-jacobhall-net img {
+.whostyle-jacobhall-net img:not(.hidden-u-photo) {
 	width: 100%;
 	height: 100%;
 }
