tweaking others' whostyles
- adding maxwelljoslyn.com whostyle (one line added, see comment)
- tweaking padding for maya.land whostyle (same as above)

--- a/styles/whostyles/maya-land/whostyle.css
+++ b/styles/whostyles/maya-land/whostyle.css
@@ -127,6 +127,8 @@
 	margin-right: auto;
 	margin-left: auto;
 	padding-top: 7px;
+	/* adding some top padding for extra style -jacob */
+	padding-top: calc(7px + 1em);
 	padding-bottom: 7px;
 	padding-right: 37px;
 	padding-left: 37px;
