--- a/styles/article.css
+++ b/styles/article.css
@@ -117,8 +117,8 @@
 			font-size: 3em;
 		}
 		@media (min-width: 80em) {
-			#contentbox {
-				padding-top: 3.5em;
+			article {
+				margin-top: 5em;
 			}
 			#backprofilepic {
 				height: 8em;
