comments (and their comments) now appear in comments section
there are still a lot of loose ends though! comments aren't
labeled correctly and do not have whostyles.

--- a/styles/article.css
+++ b/styles/article.css
@@ -13,6 +13,9 @@
 			text-align: left;
 			line-height: 2em;
 		}
+		#contentbox {
+			text-align: left;
+		}
 		.date {
 			color: gray;
 			font-style: italic;
