--- a/styles/whostyles/maxwelljoslyn-com/whostyle.css
+++ b/styles/whostyles/maxwelljoslyn-com/whostyle.css
@@ -1,3 +1,7 @@
+.whostyle-maxwelljoslyn-com {
+	padding: 1em;
+}
+
 .whostyle-maxwelljoslyn-com .proclamation-start {
 	text-transform: uppercase;
 }	
