--- a/styles/whostyles/whostyle-v1.css
+++ b/styles/whostyles/whostyle-v1.css
@@ -34,3 +34,7 @@
 .whostyle-jacobhall-net h5, {
 	font-size-adjust: 0.5;
 }
+.whostyle-jacobhall-net .entry-data {
+	margin-bottom: 0em;
+	padding-bottom: 0em;
+}
