removing public domain license, adding link to source (this repo)

--- a/styles/universal.css
+++ b/styles/universal.css
@@ -128,7 +128,7 @@
 				margin-top: 0em;
 			}
 		}
-		#license #indiewebring {
+		#indiewebring {
 			display: inline-block;
 			width: 50em;
 			min-width: 50%;
