improve template for announcement on homepage
- site-wide change: remove margin from body
- increase padding, font weight of announcement
- make placeholder text less specific

--- a/styles/universal.css
+++ b/styles/universal.css
@@ -4,6 +4,7 @@
 			font-family: 'Work Sans', sans-serif;
 			font-size: 14pt;
 			font-size: max(14pt, .4cm);
+			margin: 0px;
 		}
 
 		@media (max-aspect-ratio: 1/1) {
