--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -1,11 +1,10 @@
 		#announcement {
-			position: absolute;
-			top: 0;
-			left: 0;
 			width: 100%;
+			padding: 0.5em;
 			background-color: red;
 			color: white;
 			line-height: 1.5em;
+			font-weight: bold;
 		}
 
 		#announcement a {
